# platform.core.security.cynara

./: CMakeLists.txt  README  README.md  STOP_MERGE_TROLLS  changelog  project.config
base/: CMakeLists.txt  cynara-base.cpp  cynara-base.h  cynara-base.pc.in
conf/: CMakeLists.txt
conf/creds-config-tizen/: CMakeLists.txt
conf/tizen/: CMakeLists.txt
doc/: mainpage.md
doc/examples/: cynara-admin.example  cynara-client-async.example  cynara-client.example  cynara-creds-dbus.example  cynara-creds-gdbus.example  cynara-creds-self.example  cynara-creds-socket.example  cynara-session.example
docs/: Doxyfile  mainpage.md
docs/examples/: admin-api.cpp  admin-api.cpp.example  client-api.cpp  client-async-api.cpp  cynara-client-async.example  cynara-client.example  cynara-creds-dbus.example  cynara-creds-gdbus.example  cynara-creds-socket.example  cynara-session.example  dbus-creds-api.cpp  dbus-creds-api.cpp.example  gdbus-creds-api.cpp  gdbus-creds-api.cpp.example  session-api.cpp  socket-creds-api.cpp  socket-creds-api.cpp.example
main/: CMakeLists.txt  cynara-main.cpp
migration/: CMakeLists.txt  cynara-db-migration  cynara-db-migration.in  cynara-db-migration.sh  cynara-db-vercmp  cynara-migration.sh  migrate.sh
packaging/: cynara-first.spec  cynara-second.spec  cynara.spec  libcynara-commons.spec  libcynara-dbus.spec
pc/cynara-admin/: CMakeLists.txt
pc/cynara-client/: CMakeLists.txt
pkgconfig/: CMakeLists.txt
pkgconfig/cynara-admin/: CMakeLists.txt
pkgconfig/cynara-agent/: CMakeLists.txt
pkgconfig/cynara-client/: CMakeLists.txt  cynara-client.pc.in
pkgconfig/cynara-client-async/: CMakeLists.txt
pkgconfig/cynara-creds-commons/: CMakeLists.txt
pkgconfig/cynara-creds-config-tizen/: CMakeLists.txt  cynara-creds-config-tizen.pc.in
pkgconfig/cynara-creds-dbus/: CMakeLists.txt  cynara-creds-dbus.pc.in
pkgconfig/cynara-creds-socket/: CMakeLists.txt  cynara-creds-socket.pc.in
pkgconfig/cynara-offline-admin/: CMakeLists.txt  cynara-offline-admin.pc.in
pkgconfig/cynara-plugin/: CMakeLists.txt  cynara-plugin.pc.in
pkgconfig/cynara-session/: CMakeLists.txt
python/: __init__.py  admin.py  client.py  cynara.i
ret/: CMakeCache.txt
ret/migration/: cynara-db-migration
src/: CMakeLists.txt
src/admin/: CMakeLists.txt  warzywko.cpp
src/admin-common/: AdminHandler.cpp  AdminHandler.h  CMakeLists.txt
src/agent/: CMakeLists.txt
src/chsgen/: CMakeLists.txt  ChecksumGenerator.cpp  ChecksumGenerator.h  main.cpp
src/client/: CMakeLists.txt  client-api.cpp
src/client-async/: CMakeLists.txt
src/client-common/: CMakeLists.txt
src/common/: CMakeLists.txt  common.h  warzywko.cpp
src/creds-config-tizen/: CMakeLists.txt  CMakeLists.txt~
src/cyad/: AdminApiWrapper.cpp  AdminApiWrapper.h  AdminLibraryInitializationFailedException.h  AdminPolicyParser.cpp  AdminPolicyParser.h  BaseAdminApiWrapper.h  BaseDispatcherIO.h  CMakeLists.txt  CommandsDispatcher.cpp  CommandsDispatcher.h  Cyad.cpp  Cyad.h  CyadExitCode.h  CynaraAdminPolicies.cpp  CynaraAdminPolicies.h  DispatcherIO.cpp  DispatcherIO.h  PolicyTypeTranslator.cpp  PolicyTypeTranslator.h  main.cpp
src/external-plugin/: cynara-plugin.h
src/helpers/socket-credentials/: CMakeLists.txt  socket-credentials.cpp
src/helpers/socket-credentials/api/: socket-credentials.cpp
src/include/: CMakeLists.txt  client_codes.h  cynara-admin-error.h  cynara-admin-policy.h  cynara-admin-types.h  cynara-admin.h  cynara-agent-error.h  cynara-agent.h  cynara-client-async.h  cynara-client-error.h  cynara-client-plugin.h  cynara-client.h  cynara-creds-commons.h  cynara-creds-dbus.h  cynara-creds-gdbus.h  cynara-creds-socket.h  cynara-dbus-credentials-helper.h  cynara-error.h  cynara-helper-credentials-dbus.h  cynara-helper-credentials-socket.h  cynara-helper-credentials.h  cynara-helper-session.h  cynara-limits.h  cynara-monitor-types.h  cynara-monitor.h  cynara-offline-admin.h  cynara-plugin.h  cynara-policy-types.h  cynara-session.h  cynara-socket-credentials-helper.h  cynara-storage.h  dbus-credentials-helper.h  helper-session.h  socket-credentials-helper.h
src/plugin/: CMakeLists.txt  ClientPlugin.cpp  ServicePlugin.cpp  SupportedTypes.h
src/plugin/client/: ClientPlugin.cpp
src/plugin/service/: CapacityCache.h  ServicePlugin.cpp
systemd/: CMakeLists.txt  cynara-admin.socket  cynara-admin.socket.in  cynara-agent.socket  cynara-agent.socket.in  cynara-async.socket  cynara-monitor-get.socket  cynara-monitor-get.socket.in  cynara.service  cynara.service.in  cynara.socket  cynara.socket.in
test/: Benchmark.h  CMakeLists.txt  TestEventListenerProxy.cpp  TestEventListenerProxy.h  helpers.cpp  helpers.h  tests.cpp
(+439 files in other folders)
