PKG_CHECK_MODULES(BASE_DEP
    REQUIRED
    cynara-base
    key-base
    )

SET(TARGET_BASE "cynara-main")

SET(BASE_SRC
  ${PROJECT_SOURCE_DIR}/main/cynara-main.cpp
  )

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/base
  ${BASE_DEP_INCLUDE_DIRS}
  )

ADD_EXECUTABLE(${TARGET_BASE} ${BASE_SRC})

TARGET_LINK_LIBRARIES(${TARGET_BASE} ${BASE_DEP_LIBRARIES})

INSTALL(TARGETS ${TARGET_BASE} DESTINATION /usr/bin)

